<resources>
    <string name="app_name">Teams Messaging App</string>
    <string name="name">Name</string>
    <string name="circles">Circles</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset_code">Password Reset Code</string>
    <string name="enter_reset_code">Enter Reset Code</string>
    <string name="request_password_reset_code">Request For Password Reset Code</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="contact_list">Contact List</string>
    <string name="profile">Profile</string>
    <string name="search_user_group">User/Group Search</string>
    <string name="view_contact_list">Contact List</string>
    <string name="view_profile_details">Profile</string>
    <string name="send">Send</string>
    <string name="type">Type…</string>
    <string name="log_out">Log Out</string>
    <string name="backup_data">Backup Data</string>
    <string name="change_username">Change Username</string>
    <string name="edit_display_name">Edit Display Name</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="search_long">Search for a user by their username or display name</string>
    <string name="add_new">Add New</string>
    <string name="add_contact">Add Contact</string>
    <string name="time">Time</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="select_members">Select Members</string>
    <string name="search_by_name_username">Search by name/username</string>
    <string name="create_new_group">Create New Group</string>
    <string name="search_contact_group">Search contact/group</string>
    <string name="no_chats_found">No chats found. Search for a contact/group to begin a conversation</string>
    <string name="num_new">1</string>
    <string name="time_o">0</string>
    <string name="we_have_sent_an_otp_to_your_email">We have sent an OTP to your email</string>
    <string name="sent_to_email_here">Sent to (email)</string>
    <string name="didn_t_receive_a_verification_code">Didn\'t receive a verification code?</string>
    <string name="resend_email_m_s">Resend email (m:s)</string>
    <string name="role">Role</string>
    <string name="info">Info</string>
    <string name="delete_group">Delete Group</string>
    <string name="rename">Rename</string>
    <string name="add_member">Add Member</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="default_notification_channel_id">defaultChannel</string>
</resources>