<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="80dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_msg_recipient"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/name"
        android:textColor="@color/colorBlue"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtContactName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/title"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMessage"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/time"
        android:textSize="12sp" />

</RelativeLayout>