<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProfilePic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@drawable/temp_user"
            app:civ_circle_background_color="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/civProfilePic"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/txtMsgTime"
            android:layout_toEndOf="@id/civProfilePic"
            android:ellipsize="end"
            android:lines="1"
            android:padding="2dp"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTopMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/civProfilePic"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/txtMsgTime"
            android:layout_toEndOf="@id/civProfilePic"
            android:ellipsize="end"
            android:lines="1"
            android:padding="2dp"
            android:text="@string/username" />

        <TextView
            android:id="@+id/txtMsgTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtName"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/txtNumNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtTopMsg"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_round_blue"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/num_new"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>