<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProfilePic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@drawable/temp_user"
            app:civ_circle_background_color="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/role"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/txtRole"
            android:layout_toEndOf="@+id/civProfilePic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/username" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>