<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/edtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:lines="1"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtLayout"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>