<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEFEF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:weightSum="4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:contentDescription="@string/circles"
                android:scaleType="fitStart"
                android:src="@drawable/ic_top_circles_blue" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:weightSum="4">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:contentDescription="@string/circles"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_bottom_circles_green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="56dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_bg_round_top_end"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/name"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_user"
                    app:tint="@color/colorBlue" />

                <EditText
                    android:id="@+id/edtName"
                    style="@style/AuthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:background="@drawable/view_bg_block"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/username"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_username"
                    app:tint="@color/colorBlue" />

                <EditText
                    android:id="@+id/edtUsername"
                    style="@style/AuthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/username"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:background="@drawable/view_bg_block"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/email_address"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/colorBlue" />

                <EditText
                    android:id="@+id/edtEmailAddress"
                    style="@style/AuthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:background="@drawable/view_bg_block"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/email_address"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_password"
                    app:tint="@color/colorBlue" />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/AuthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:background="@drawable/view_bg_round_bottom_end"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/confirm_password"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_password"
                    app:tint="@color/colorBlue" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/AuthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutInput"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:text="@string/register"
            android:textColor="@color/colorBlack"
            android:textSize="32sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutInput"
            android:padding="12dp"
            android:text="@string/login"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutInput"
            android:layout_alignEnd="@+id/layoutInput"
            android:padding="12dp"
            android:text="@string/forgot_password"
            android:textSize="13sp" />


        <Button
            android:id="@+id/btnRegister"
            style="@style/ButtonRoundEndRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLogin"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register" />
    </RelativeLayout>
</layout>
